# lessonly

./: .dockerignore  Dockerfile  Makefile  Procfile  README.md  entrypoint.sh  pyproject.toml
docs/: product.md  roadmap.md
docs/mvp/: design.md
src/: __init__.py
src/lessonly/: settings.py
src/lessonly/agents/intructionalist/: agent.py  prompts.py
src/lessonly/agents/manager/: agent.py  prompts.py  tools.py
src/lessonly/agents/orchestrator/: agent.py  prompts.py
src/lessonly/domain/: repositories.py
src/lessonly/domain/models/: defs.py  dialog.py  lesson.py
src/lessonly/interfaces/app/: configs.py  main.py  rendering.py  utils.py
src/lessonly/interfaces/app/pages/: 1_block.py  1_lesson.py  2_lesson.py  3_dialog.py
src/lessonly/interfaces/cli/: main.py
src/lessonly/shared/: logging.py
src/ui/: configs.py  main.py
src/ui/pages/: __init__.py
